Fix panel z-index issue.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6240,7 +6240,7 @@ a {
   box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08); }
   .panel--hidden {
     position: absolute;
-    z-index: 100;
+    z-index: 400;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
     display: none;
@@ -6285,7 +6285,7 @@ a {
     left: 0;
     width: 100%;
     min-width: 400px;
-    z-index: 100; }
+    z-index: 400; }
   .panel-search--active {
     display: block; }
   .panel-search__tips__item {
