--- a/src/styles/components/panels/panel-search.scss
+++ b/src/styles/components/panels/panel-search.scss
@@ -9,7 +9,7 @@
 		left: 0;
 		width: 100%;
 		min-width: 400px;
-		z-index: 100;
+		z-index: 400;
 	}
 
 	&--active {
