--- a/src/styles/components/panels/panel.scss
+++ b/src/styles/components/panels/panel.scss
@@ -8,7 +8,7 @@
 
 	&--hidden {
 		position: absolute;
-		z-index: 100;
+		z-index: 400;
 		transform: translateX(-50%);
 		display: none;
 		margin-top: 40px;
